--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>我的简历</title>
+    <title>我的简历lzz</title>
     <link rel="stylesheet" href="src/css/common.css">
     <link rel="stylesheet" href="src/css/index.css">
 </head>
