--- a/index.html
+++ b/index.html
@@ -1,37 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>我的简历lzz</title>
-    <link rel="stylesheet" href="src/css/common.css">
-    <link rel="stylesheet" href="src/css/index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
 
-
     <div class="topNavBar clearfix">
-        <div class="logo">
-            <a href="#"><span>RS</span></a><a href="#"><span>card</span></a>
-        </div>
+        <a href="#" style="float:left" class="logo">
+            <span class="rs">RS</span><span class="card">card</span>
+        </a>
+        <nav style="float: right;">
 
-        <nav>
             <ul class="clearfix">
-                <li><a href="">ABOUT</a></li>
-                <li><a href=""> SKILLS</a></li>
-                <li><a href=""> PORTFOLIO</a></li>
-                <li><a href="">EXPERIENCE</a></li>
-                <li><a href="">PRICING</a></li>
-                <li><a href=""> BLOG</a></li>
-                <li><a href=""> CALENDAR</a></li>
-                <li><a href=""> CONTACT</a></li>
-                <li><a href=""> OTHER</a></li>
-            </ul>
+                <li> <a href='#'>ABOUT</a></li>
+                <li> <a href='#'>SKILLS</a></li>
 
+                <li> <a href='#'>PORTFOLIO</a></li>
+                <li> <a href='#'>EXPERIENCE</li></a>
+
+                <li> <a href='#'>PRICING</a></li>
+                <li> <a href='#'>BLOG</a> </li>
+                <li> <a href='#'>CALENDAR</a></li>
+                <li> <a href='#'>CONTACT</a></li>
+
+                <li> <a href='#'>OTHER</a> </li>
+            </ul>
         </nav>
+    </div>
+    <div class="banner">
+
 
     </div>
+    <main>
+        <div class="card">
 
-   <div class="banner"></div>
 
+            <div class="picture">
+
+                <img src="" alt="头像" />
+            </div>
+
+            <div class="text">
+                <div class="profile">
+                    <span class="welcaome"></span>
+                    <h1>李泽泽</h1>
+                    <p>前端开发工程师</p>
+                    <hr>
+                    <dl>
+                        <dt>年龄</dt>
+                        <dd>18</dd>
+
+                        <dt>所在城市</dt>
+                        <dd>北京</dd>
+
+                        <dt>邮箱</dt>
+                        <dd>2222</dd>
+
+                        <dt>手机</dt>
+                        <dd>18622321433</dd>
+                    </dl>
+
+                </div>
+
+                <footer class="media">
+
+                    <a href="#"><img src="" alt="" href="#"></a>
+                    <a href="#"><img src="" alt="" href="#"></a>
+                    <a href="#"><img src="" alt="" href="#"></a>
+                    <a href="#"><img src="" alt="" href="#"></a>
+                    <a href="#"><img src="" alt="" href="#"></a>
+                    <a href="#"><img src="" alt="" href="#"></a>
+                    <a href="#"><img src="" alt="" href="#"></a>
+
+
+                </footer>
+
+            </div>
+            <a href="button">下载PDF</a>
+            <p>李泽泽,前端开发开发工程师，目前在北京工作。
+                技能:Jquery，React，JavaScript，BootStrap，Require.js
+                后台语言: C#,Java</p>
+        </div>
+    </main>
+    <section>
+        <h2>技能</h2>
+
+
+        <ol>
+            <li>HTML 5 & css3</li>
+            <li>Javascript</li>
+            <li>Juquer</li>
+            <li>Vue</li>
+            <li>React</li>
+            <li>HTTP</li>
+        </ol>
+
+
+    </section>
+    <section>
+        <h2>作品</h2>
+        <nav>
+
+            <ol>
+                <li>所以</li>
+                <li>框架</li>
+                <li>原生JS</li>
+            </ol>
+        </nav>
+
+        <div class="jobs">
+
+            <div class="big"></div>
+            <div class="small"></div>
+            <div class="small"></div>
+
+        </div>
+    </section>
 </body>
+
 </html>
