--- a/index.html
+++ b/index.html
@@ -7,121 +7,71 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./lib/font/iconfont.css">
 </head>
 
 <body>
+<div class="topNavBar">
+    <div class="topNavBar-inner">
+        <div class="logo">
+            <span>RS</span>
+            <span>card</span>
 
-    <div class="topNavBar clearfix">
-        <a href="#" style="float:left" class="logo">
-            <span class="rs">RS</span><span class="card">card</span>
-        </a>
-        <nav style="float: right;">
-
-            <ul class="clearfix">
-                <li> <a href='#'>ABOUT</a></li>
-                <li> <a href='#'>SKILLS</a></li>
-
-                <li> <a href='#'>PORTFOLIO</a></li>
-                <li> <a href='#'>EXPERIENCE</li></a>
-
-                <li> <a href='#'>PRICING</a></li>
-                <li> <a href='#'>BLOG</a> </li>
-                <li> <a href='#'>CALENDAR</a></li>
-                <li> <a href='#'>CONTACT</a></li>
-
-                <li> <a href='#'>OTHER</a> </li>
+        </div>
+        <nav class="navBar">
+            <ul>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">SKILLS</a></li>
+                <li><a href="#">PORTFOLIO </a></li>
+                <li><a href="#">EXPERIENCE </a></li>
+                <li><a href="#">PRICING </a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">CALENDAR </a></li>
+                <li><a href="#">CONTACT </a></li>
             </ul>
         </nav>
     </div>
-    <div class="banner">
-
-
-    </div>
-    <main>
+</div>
+<div class="banner">
+    <div class="mask"></div>
+</div>
+<main>
+    <div class="card-container">
         <div class="card">
-
-
-            <div class="picture">
-
-                <img src="" alt="头像" />
-            </div>
-
-            <div class="text">
+            <div class="profile-container">
+                <div class="img"><img src="./img/person.jpg" height="317px" alt=""></div>
                 <div class="profile">
-                    <span class="welcaome"></span>
+                    <span>Hello</span>
                     <h1>李泽泽</h1>
                     <p>前端开发工程师</p>
-                    <hr>
-                    <dl>
-                        <dt>年龄</dt>
-                        <dd>18</dd>
-
-                        <dt>所在城市</dt>
-                        <dd>北京</dd>
-
-                        <dt>邮箱</dt>
-                        <dd>2222</dd>
-
-                        <dt>手机</dt>
-                        <dd>18622321433</dd>
-                    </dl>
-
+                    <hr style="margin-top: 20px">
+                    <ul>
+                        <li>24</li>
+                        <li>北京市大兴区</li>
+                        <li>18622321433</li>
+                        <li>18622321433@163.com</li>
+                        <li>本科(非统招)</li>
+                    </ul>
                 </div>
-
-                <footer class="media">
-
-                    <a href="#"><img src="" alt="" href="#"></a>
-                    <a href="#"><img src="" alt="" href="#"></a>
-                    <a href="#"><img src="" alt="" href="#"></a>
-                    <a href="#"><img src="" alt="" href="#"></a>
-                    <a href="#"><img src="" alt="" href="#"></a>
-                    <a href="#"><img src="" alt="" href="#"></a>
-                    <a href="#"><img src="" alt="" href="#"></a>
-
-
-                </footer>
-
             </div>
-            <a href="button">下载PDF</a>
-            <p>李泽泽,前端开发开发工程师，目前在北京工作。
-                技能:Jquery，React，JavaScript，BootStrap，Require.js
-                后台语言: C#,Java</p>
+            <footer class="media">
+
+                <ul>
+                    <li><a href="#">
+                        <i class="iconfont icon-weixin"></i>
+                    </a></li>
+                    <li><a href="#"><i class="iconfont icon-github"></i></a></li>
+                    <li><a href="#"><i class="iconfont icon-google"></i></a></li>
+                    <li><a href="#"><i class="iconfont icon-qq-copy-copy"></i></a></li>
+                    <li><a href="#"><i class="iconfont icon-weibo"></i></a></li>
+                    <li><a href="#"><i class="iconfont icon-zhifubao" style="width: 45px; height: 45px"></i></a></li>
+                </ul>
+            </footer>
         </div>
-    </main>
-    <section>
-        <h2>技能</h2>
+    </div>
+</main>
 
 
-        <ol>
-            <li>HTML 5 & css3</li>
-            <li>Javascript</li>
-            <li>Juquer</li>
-            <li>Vue</li>
-            <li>React</li>
-            <li>HTTP</li>
-        </ol>
-
-
-    </section>
-    <section>
-        <h2>作品</h2>
-        <nav>
-
-            <ol>
-                <li>所以</li>
-                <li>框架</li>
-                <li>原生JS</li>
-            </ol>
-        </nav>
-
-        <div class="jobs">
-
-            <div class="big"></div>
-            <div class="small"></div>
-            <div class="small"></div>
-
-        </div>
-    </section>
 </body>
 
 </html>
