--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>李泽泽的简历</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="./lib/font/iconfont.css">
 </head>
@@ -69,6 +69,8 @@
             </footer>
         </div>
     </div>
+    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=30814754&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1075930808:51" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>
+
 </main>
 
 
