--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>李泽泽的简历</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="./lib/font/iconfont.css">
+
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_643738_jbxs673mpnv78pvi.css">
 </head>
 
 <body>
