--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>李泽泽的简历</title>
     <link rel="stylesheet" href="index.css">
 
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_643738_jbxs673mpnv78pvi.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_643738_jbxs673mpnv78pvi.js">
 </head>
 
 <body>
