--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>李泽泽的简历</title>
     <link rel="stylesheet" href="index.css">
-
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_643738_jbxs673mpnv78pvi.js">
 </head>
 
 <body>
@@ -59,22 +57,33 @@
 
                 <ul>
                     <li><a href="#">
-                        <i class="iconfont icon-weixin"></i>
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-github"></use>
+                        </svg>
                     </a></li>
-                    <li><a href="#"><i class="iconfont icon-github"></i></a></li>
-                    <li><a href="#"><i class="iconfont icon-google"></i></a></li>
-                    <li><a href="#"><i class="iconfont icon-qq-copy-copy"></i></a></li>
-                    <li><a href="#"><i class="iconfont icon-weibo"></i></a></li>
-                    <li><a href="#"><i class="iconfont icon-zhifubao" style="width: 45px; height: 45px"></i></a></li>
+                    <li><a href="#"><svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-weixin"></use>
+                    </svg></a></li>
+                    <li><a href="#"><svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-google"></use>
+                    </svg></a></li>
+                    <li><a href="#"><svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-qq-copy-copy"></use>
+                    </svg></a></li>
+                    <li><a href="#"><svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-weibo"></use>
+                    </svg></a></li>
+                    <li><a href="#"><svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-zhifubao"></use>
+                    </svg></a></li>
                 </ul>
             </footer>
         </div>
     </div>
-    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=30814754&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1075930808:51" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>
 
 </main>
 
 
 </body>
-
+<script src="./lib/font/iconfont.js"></script>
 </html>
