--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             <div class="profile-container">
                 <div class="img"><img src="./img/person.jpg" height="317px" alt=""></div>
                 <div class="profile">
-                    <span>Hello</span>
+                    <span class="welcome">Hello
+                    <span class="triangle"></span></span>
                     <h1>李泽泽</h1>
                     <p>前端开发工程师</p>
                     <hr style="margin-top: 20px">
@@ -54,7 +55,6 @@
                 </div>
             </div>
             <footer class="media">
-
                 <ul>
                     <li><a href="#">
                         <svg class="icon" aria-hidden="true">
@@ -80,10 +80,11 @@
             </footer>
         </div>
     </div>
-
 </main>
 
-
+<p class="download-warpper">
+    <a href="./李泽泽-2019-前端.pdf" target="_blank" download class="downloadPDF">下载 PDF 简历</a>
+</p>
 </body>
 <script src="./lib/font/iconfont.js"></script>
 </html>
