技能条完成

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navBar">
             <ul>
                 <li><a href="#">ABOUT</a></li>
-                <li><a href="#">SKILLS</a></li>
+                <li><a href="#skills">SKILLS</a></li>
                 <li><a href="#">PORTFOLIO </a></li>
                 <li><a href="#">EXPERIENCE </a></li>
                 <li><a href="#">PRICING </a></li>
@@ -50,7 +50,7 @@
                         <li>北京市大兴区</li>
                         <li>18622321433</li>
                         <li>18622321433@163.com</li>
-                        <li>本科(非统招)</li>
+                        <li>本科(非统招学信网可查)</li>
                     </ul>
                 </div>
             </div>
@@ -61,21 +61,31 @@
                             <use xlink:href="#icon-github"></use>
                         </svg>
                     </a></li>
-                    <li><a href="#"><svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-weixin"></use>
-                    </svg></a></li>
-                    <li><a href="#"><svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-google"></use>
-                    </svg></a></li>
-                    <li><a href="#"><svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-qq-copy-copy"></use>
-                    </svg></a></li>
-                    <li><a href="#"><svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-weibo"></use>
-                    </svg></a></li>
-                    <li><a href="#"><svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-zhifubao"></use>
-                    </svg></a></li>
+                    <li><a href="#">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-weixin"></use>
+                        </svg>
+                    </a></li>
+                    <li><a href="#">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-google"></use>
+                        </svg>
+                    </a></li>
+                    <li><a href="#">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-qq-copy-copy"></use>
+                        </svg>
+                    </a></li>
+                    <li><a href="#">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-weibo"></use>
+                        </svg>
+                    </a></li>
+                    <li><a href="#">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-zhifubao"></use>
+                        </svg>
+                    </a></li>
                 </ul>
             </footer>
         </div>
@@ -85,6 +95,58 @@
 <p class="download-warpper">
     <a href="./李泽泽-2019-前端.pdf" target="_blank" download class="downloadPDF">下载 PDF 简历</a>
 </p>
+<div class="describe">
+    <p>
+        李泽泽，前端开发工程师,目前离职状态，希望找到一份合适的工作
+
+    </p>
+    <p>技能：<strong>前端</strong>开发，<strong>C#</strong>开发，<strong>Java</strong>开发</p>
+</div>
+
+<section class="skills" id="skills">
+
+    <h2>技能</h2>
+    <div class="skills-inner">
+        <ul>
+            <li>
+                <h3>HTML</h3>
+                <div class="progressBar">
+                    <div class="progress"></div>
+                </div>
+            </li>
+            <li>
+                <h3>HTML</h3>
+                <div class="progressBar">
+                    <div class="progress"></div>
+                </div>
+            </li>
+            <li>
+                <h3>HTML</h3>
+                <div class="progressBar">
+                    <div class="progress"></div>
+                </div>
+            </li>
+            <li>
+                <h3>HTML</h3>
+                <div class="progressBar">
+                    <div class="progress"></div>
+                </div>
+            </li>
+            <li>
+                <h3>HTML</h3>
+                <div class="progressBar">
+                    <div class="progress"></div>
+                </div>
+            </li>
+            <li>
+                <h3>HTML</h3>
+                <div class="progressBar">
+                    <div class="progress"></div>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
 </body>
 <script src="./lib/font/iconfont.js"></script>
 </html>
