--- a/index.html
+++ b/index.html
@@ -55,48 +55,48 @@
                 </div>
             </div>
             <footer class="media">
-                   <ul>
-                       <li><a href="https://github.com/lizeze" target="_blank">
-                           <svg class="icon" aria-hidden="true">
-                               <use xlink:href="#icon-github"></use>
-                           </svg>
-                       </a></li>
-                       <li id="weixinBar" style="position: relative">
-                           <a href="javascript:void(0)">
-                               <svg class="icon" aria-hidden="true">
-                                   <use xlink:href="#icon-weixin"></use>
-                               </svg>
-                           </a>
-                           <img id="weixinImg" src="./img/weixin.jpg" alt="" width="100px" height="100px"
-                                style="position: absolute;top:-80px; left: 0px;display: none">
+                <ul>
+                    <li><a href="https://github.com/lizeze" target="_blank">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-github"></use>
+                        </svg>
+                    </a></li>
+                    <li id="weixinBar" style="position: relative">
+                        <a href="javascript:void(0)">
+                            <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icon-weixin"></use>
+                            </svg>
+                        </a>
+                        <img id="weixinImg" src="./img/weixin.jpg" alt="" width="100px" height="100px"
+                             style="position: absolute;top:-80px; left: 0px;display: none">
 
-                       </li>
-                       <li id="qqBar" style="position: relative"><a href="javascript:void(0)">
-                           <svg class="icon" aria-hidden="true">
-                               <use xlink:href="#icon-qq-copy-copy"></use>
-                           </svg>
-                       </a>
-                           <img id="qqImg" src="./img/qq.jpg" alt="" width="100px" height="100px"
-                                style="position: absolute;top:-80px; left: 0px;display: none"></li>
-                       <li><a href="https://www.zhihu.com/people/ze-ze-6-77/posts" target="_blank">
-                           <svg class="icon" aria-hidden="true">
-                               <use xlink:href="#icon-zhihu"></use>
-                           </svg>
-                       </a></li>
+                    </li>
+                    <li id="qqBar" style="position: relative"><a href="javascript:void(0)">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-qq-copy-copy"></use>
+                        </svg>
+                    </a>
+                        <img id="qqImg" src="./img/qq.jpg" alt="" width="100px" height="100px"
+                             style="position: absolute;top:-80px; left: 0px;display: none"></li>
+                    <li><a href="https://www.zhihu.com/people/ze-ze-6-77/posts" target="_blank">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-zhihu"></use>
+                        </svg>
+                    </a></li>
 
-                       <li><a href="https://juejin.im/user/5b2c545ce51d4558af402efa" target="_blank">
-                           <svg class="icon" aria-hidden="true">
-                               <use xlink:href="#icon-juejin"></use>
-                           </svg>
-                       </a></li>
-                       <li id="zhifubaoBar" style="position: relative"><a href="#">
-                           <svg class="icon" aria-hidden="true">
-                               <use xlink:href="#icon-zhifubao"></use>
-                           </svg>
-                       </a>
-                           <img id="zhifubaoImg" src="./img/zhifubao.jpg" alt="" width="100px" height="100px"
-                                style="position: absolute;top:-80px; left: 0px;display: none"></li>
-                   </ul>
+                    <li><a href="https://juejin.im/user/5b2c545ce51d4558af402efa" target="_blank">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-juejin"></use>
+                        </svg>
+                    </a></li>
+                    <li id="zhifubaoBar" style="position: relative"><a href="#">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-zhifubao"></use>
+                        </svg>
+                    </a>
+                        <img id="zhifubaoImg" src="./img/zhifubao.jpg" alt="" width="100px" height="100px"
+                             style="position: absolute;top:-80px; left: 0px;display: none"></li>
+                </ul>
             </footer>
         </div>
     </div>
@@ -172,7 +172,19 @@
                 <div id="workBar" class="bar-inner state-1"></div>
             </div>
         </div>
+        <div class="items" style="height: 580px">
+            <div class="big" style="left: 0;top: 0;">
+                <img src="./img/1.jpg" alt="" width="600" height="580" >
+            </div>
+            <div class="small" style="left: 638px">
+                <img src="./img/2.jpg" alt="" width="287px">
+            </div>
+            <div class="small" style="left: 638px;top: 302px;">
+                <img src="./img/3.jpg" alt="">
+            </div>
+        </div>
     </div>
+
 </section>
 </body>
 <script src="./js/index.js"></script>
