--- a/index.html
+++ b/index.html
@@ -7,10 +7,85 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>李泽泽的简历</title>
     <link rel="stylesheet" href="index.css">
+    <style>
+
+        .loading {
+            height: 200px;
+            width: 200px;
+            position: relative;
+        }
+
+        .loading::before,
+        .loading::after {
+            content: '';
+            position: absolute;
+            background: #000;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 0px;
+            width: 0px;
+            margin: auto;
+            border-radius: 50%;
+            animation: s 2s linear infinite;
+        }
+
+        .loading::after {
+            animation-delay: 1s;
+        }
+
+        @keyframes s {
+            0% {
+                width: 0px;
+                height: 0px;
+                opacity: 1;
+            }
+            100% {
+                width: 100px;
+                height: 100px;
+                opacity: 0;
+            }
+        }
+
+        .loading-warpper {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #888;
+
+        }
+
+        .loading-warpper.active {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1;
+
+
+        }
+
+        .main {
+            display: none;
+            transition: all 0.3s;
+        }
+
+        .main.active {
+            display: block;
+        }
+    </style>
 </head>
 
 <body>
-<div class="topNavBar">
+<div id="loading" class="loading-warpper active">
+    <div class="loading"></div>
+
+
+</div>
+<div id="topNavBar" class="topNavBar">
     <div class="topNavBar-inner">
         <div class="logo">
             <span>RS</span>
@@ -19,14 +94,21 @@
         </div>
         <nav class="navBar">
             <ul>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#skills">SKILLS</a></li>
-                <li><a href="#">PORTFOLIO </a></li>
-                <li><a href="#">EXPERIENCE </a></li>
-                <li><a href="#">PRICING </a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">CALENDAR </a></li>
-                <li><a href="#">CONTACT </a></li>
+                <li><a href="#siteAbout">关于</a></li>
+                <li><a href="#siteSkills">技能</a></li>
+                <li><a href="#siteWork">作品 </a>
+
+                </li>
+                <li><a href="#">博客 </a>
+                    <ul>
+                        <li><a href="https://www.zhihu.com/people/ze-ze-6-77/posts" target="_blank">知乎</a></li>
+                        <li><a href="https://juejin.im/user/5b2c545ce51d4558af402efa" target="_blank">掘金</a></li>
+
+                    </ul>
+                </li>
+                <li><a href="#">日历 </a></li>
+                <li><a href="#">联系方式</a></li>
+                <li><a href="#">其他 </a></li>
             </ul>
         </nav>
     </div>
@@ -35,7 +117,7 @@
     <div class="mask"></div>
 </div>
 <main>
-    <div class="card-container">
+    <div class="card-container" id="siteAbout">
         <div class="card">
             <div class="profile-container">
                 <div class="img"><img src="./img/person.jpg" height="317px" alt=""></div>
@@ -47,7 +129,7 @@
                     <hr style="margin-top: 20px">
                     <ul>
                         <li>24</li>
-                        <li>北京市大兴区</li>
+                        <li>北京市</li>
                         <li>18622321433</li>
                         <li>18622321433@163.com</li>
                         <li>本科(非统招学信网可查)</li>
@@ -113,7 +195,7 @@
     <p>技能：<strong>前端</strong>开发，<strong>C#</strong>开发，<strong>Java</strong>开发</p>
 </div>
 
-<section class="skills" id="skills">
+<section class="skills" id="siteSkills">
     <h2>技能</h2>
     <div class="skills-inner">
         <ul>
@@ -156,7 +238,7 @@
         </ul>
     </div>
 </section>
-<section class="works">
+<section class="works" id="siteWork">
     <div class="works-inner">
         <h2>作品</h2>
         <div style="display: inline-block">
@@ -173,7 +255,7 @@
         </div>
         <div class="items" style="height: 580px">
             <div class="big" style="left: 0;top: 0;">
-                <img src="./img/1.jpg" alt="" width="600" height="580" >
+                <img src="./img/1.jpg" alt="" width="600" height="580">
             </div>
             <div class="small" style="left: 638px">
                 <img src="./img/2.jpg" alt="" width="287px">
@@ -186,6 +268,14 @@
 
 </section>
 </body>
+<script>
+
+    setTimeout(function () {
+        loading.classList.remove('active')
+
+    }, 1000 * 1)
+</script>
 <script src="./js/index.js"></script>
 <script src="./lib/font/iconfont.js"></script>
+<script src="./lib/Tween.min.js"></script>
 </html>
