--- a/index1.html
+++ b/index1.html
@@ -1,20 +1,45 @@
 <!doctype html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
-    <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css"/>
-    <title>地图显示</title>
-    <style>
-        iframe{
-            width:100%;
-            height: 500px;
-        }
-    </style>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
+  <title>地图显示</title>
+  <style>
+  </style>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
 </head>
+
 <body>
-   <iframe src="https://m.amap.com/navi/?dest=116.322739,39.676868&destName=我的家&hideRouteIcon=1&key=4d34f2acb406a07e2c70d19282221b55
-"></iframe>
+
+
+
+  <input type="text" id="aaaa">
+  <input type="button" value="">
+
+    <button onclick="$('aaaa')">按钮1</button>
 </body>
+<script>
+
+  var x='1'
+
+    
+  function a() {
+
+
+    console.log($('#aaaa').val())
+
+  }
+
+ 
+
+  function $(id) {
+
+    document.getElementById(id)
+
+  }
+
+</script>
+
 </html>
