'修改文件路径'

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="card">
             <div class="profile-container">
 
-                <div class="img"><img src="./img/person.jpg" height="317px" alt=""></div>
+                <div class="img"><img src="/img/person.jpg" height="317px" alt=""></div>
                 <div class="profile">
                     <span class="welcome">Hello
                     <span class="triangle"></span></span>
