--- a/index.html
+++ b/index.html
@@ -119,9 +119,11 @@
 <main>
     <div class="card-container activeTag" id="siteAbout">
         <div class="card">
-            <div class="profile-container">
+            <div class="profile-container">  
 
-                <div class="img"><img src="/img/person.jpg" height="317px" alt=""></div>
+                
+
+                <div class="img"><img src="./img/person.jpg" height="317px" alt=""></div>
                 <div class="profile">
                     <span class="welcome">Hello
                     <span class="triangle"></span></span>
